--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/my_color"
-    tools:context=".MainActivity">
+    tools:context=".ContactActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:layout_above="@+id/bottom_navigation_view">
+        android:padding="16dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -22,9 +21,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/page_title"
-                android:text="Location disponible"
-                android:layout_centerInParent="true"
+                android:text="Contact"
                 android:textColor="@color/white"
+                android:layout_centerInParent="true"
                 android:textSize="30dp"
                 android:textStyle="bold"/>
             <ImageButton
@@ -40,23 +39,6 @@
             </ImageButton>
 
         </RelativeLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/title_bar_layout"
-            android:id="@+id/recyler_view"/>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/color_button"
-            android:id="@+id/add_location_btn"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:src="@drawable/ic_baseline_add_24">
-
-        </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
     </RelativeLayout>
 
