--- a/app/src/main/res/layout/activity_location_create.xml
+++ b/app/src/main/res/layout/activity_location_create.xml
@@ -13,14 +13,25 @@
         android:layout_height="wrap_content"
         android:id="@+id/title_bar_layout">
 
+        <ImageButton
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@color/my_color"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/back_btn"
+            android:src="@drawable/ic_baseline_arrow_back_24"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/page_title"
             android:text="Ajouter un véhicule"
+            android:layout_centerInParent="true"
             android:textColor="@color/white"
-            android:textSize="32dp"
+            android:textSize="30dp"
             android:textStyle="bold"/>
+
         <ImageButton
             android:layout_width="36dp"
             android:layout_height="36dp"
