--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -35,74 +35,104 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/txtNom"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="80dp"
-        android:text="Nom :"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
+        android:id="@+id/nom_layout"
+        android:layout_below="@+id/title_bar_layout"
+        android:paddingTop="12dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/nom_profil_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="80dp"
-        android:text="Doe"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
+        <TextView
+            android:id="@+id/txtNom"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:text="Nom :"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/txtPrenom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="120dp"
-        android:text="Prénom :"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
+        <TextView
+            android:id="@+id/nom_profil_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/txtNom"
+            android:text="Nom"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/prenom_profil_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="120dp"
-        android:text="John"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
+    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/txtEmail"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="160dp"
-        android:text="Email :"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
+        android:layout_below="@+id/nom_layout"
+        android:id="@+id/prenom_layout"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/email_profil_text_view"
-        android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="85dp"
+            android:layout_height="wrap_content"
+            android:text="Prénom :"
+            android:textColor="@color/white"
+            android:layout_marginTop="10dp"
+            android:id="@+id/txtPrenom"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/prenom_profil_text_view"
+            android:text="Prénom"
+            android:textColor="@color/white"
+            android:layout_toRightOf="@+id/txtPrenom"
+            android:layout_marginTop="10dp"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="160dp"
-        android:text="johndoe@gmail.com"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
+        android:layout_below="@+id/prenom_layout"
+        android:id="@+id/email_layout"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="65dp"
+            android:layout_height="wrap_content"
+            android:text="Email :"
+            android:textColor="@color/white"
+            android:layout_marginTop="10dp"
+            android:id="@+id/txtEmail"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/email_profil_text_view"
+            android:text="Email"
+            android:textColor="@color/white"
+            android:layout_toRightOf="@+id/txtEmail"
+            android:layout_marginTop="10dp"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
+
+    </RelativeLayout>
+
 
     <TextView
         android:id="@+id/txtLocationEnCours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="230dp"
+        android:layout_below="@id/email_layout"
         android:gravity="center"
-        android:text="Location en cours"
+        android:paddingTop="20dp"
+        android:text="Location en cours :"
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold" />
@@ -120,7 +150,7 @@
         android:orientation="vertical">
 
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -130,20 +160,22 @@
                 android:layout_height="wrap_content"
                 android:text="Marque :"
                 android:textColor="@color/white"
+                android:id="@+id/marque"
                 android:textSize="18sp"
                 android:layout_marginVertical="4dp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="marque"
-                android:id="@+id/marque_details_text_view"
+                android:id="@+id/marque_text_view"
+                android:layout_toRightOf="@+id/marque"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:layout_marginVertical="4dp"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -153,6 +185,7 @@
                 android:layout_height="wrap_content"
                 android:text="Modèle :"
                 android:textColor="@color/white"
+                android:id="@+id/modele"
                 android:textSize="18sp"
                 android:layout_marginVertical="4dp"/>
             <TextView
@@ -160,13 +193,14 @@
                 android:layout_height="wrap_content"
                 android:text="modèle"
                 android:id="@+id/model_details_text_view"
+                android:layout_toRightOf="@+id/modele"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:layout_marginVertical="4dp"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -175,28 +209,23 @@
                 android:layout_height="wrap_content"
                 android:text="Version :"
                 android:textColor="@color/white"
+                android:id="@+id/version"
                 android:textSize="18sp"
                 android:layout_marginVertical="4dp"/>
+
             <TextView  android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="version"
                 android:id="@+id/version_details_text_view"
+                android:layout_toRightOf="@+id/version"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:layout_marginVertical="4dp"/>
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-        </LinearLayout>
-
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -206,6 +235,7 @@
                 android:layout_height="wrap_content"
                 android:text="Durée :"
                 android:textColor="@color/white"
+                android:id="@+id/duree"
                 android:textSize="18sp"
                 android:layout_marginVertical="4dp"/>
 
@@ -214,11 +244,12 @@
                 android:layout_height="wrap_content"
                 android:text="durée"
                 android:id="@+id/carburant_details_text_view"
+                android:layout_toRightOf="@+id/duree"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:layout_marginVertical="4dp"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
