--- a/app/src/main/res/layout/confirmatin.xml
+++ b/app/src/main/res/layout/confirmatin.xml
@@ -6,23 +6,28 @@
     android:layout_height="match_parent"
     android:padding="30dp"
     android:gravity="center"
+    android:background="@color/my_color"
+
     >
 
     <LinearLayout
         android:orientation="vertical"
         android:background="@drawable/rounded_corner"
+        android:backgroundTint="@color/color_button"
         android:layout_width="match_parent"
+
         android:layout_height="200dp">
         <TextView
             android:layout_marginTop="15dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textAlignment="center"
             android:textStyle="bold"
             android:textSize="20dp"
+            android:backgroundTint="@color/color_button"
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/envoiyer" />
+            android:text="Votre message a été envoyé" />
 
         <ImageView
 
@@ -32,14 +37,14 @@
             app:srcCompat="@drawable/ic_baseline_done_24" />
 
         <TextView
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textAlignment="center"
             android:textStyle="bold"
             android:textSize="20dp"
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/accueil" />
+            android:text="Vous allez etre redirigé vers la page d’accueil" />
     </LinearLayout>
 
 
