--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,17 +7,22 @@
     android:background="@color/my_color"
     tools:context=".SearchActivity">
 
-    <RelativeLayout
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:orientation="vertical">
 
         <RelativeLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/title_bar_layout">
 
             <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/page_title"
@@ -27,6 +32,7 @@
                 android:textSize="30dp"
                 android:textStyle="bold"/>
             <ImageButton
+
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:id="@+id/menu_btn"
@@ -38,9 +44,55 @@
 
             </ImageButton>
 
+
         </RelativeLayout>
 
-    </RelativeLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:gravity="center"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="21dp">
+
+            <EditText
+                android:id="@+id/Edit_recherche"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:hint="Recherche"
+                android:background="@drawable/rounded_corner"
+                android:backgroundTint="@color/white"
+                android:textSize="24dp"
+                tools:ignore="InvalidId" />
+
+            <ImageButton
+                android:layout_marginLeft="-12dp"
+                android:id="@+id/Button_recherche"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+
+                android:backgroundTint="@color/color_button"
+                android:src="@drawable/ic_baseline_search_24" />
+
+        </LinearLayout>
+
+        <ScrollView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+               <include layout="@layout/recycler_locationvoiture_item"/>
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
