--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -7,6 +7,7 @@
     android:padding="30dp"
     android:gravity="center"
     android:background="@color/my_color"
+    android:id="@+id/confirmation"
 
     >
 
@@ -46,8 +47,5 @@
             android:layout_height="wrap_content"
             android:text="Vous allez etre redirigé vers la page d’accueil" />
     </LinearLayout>
-
-
-
 
 </LinearLayout>
