--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -113,6 +113,7 @@
                         android:hint="Veuillez saisir votre massage " />
 
                     <Button
+                        android:id="@+id/button_envoyer"
                         android:layout_gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
