--- a/app/src/main/res/layout/activity_voiturelocation_details.xml
+++ b/app/src/main/res/layout/activity_voiturelocation_details.xml
@@ -20,6 +20,7 @@
             android:id="@+id/back_btn"
             android:src="@drawable/ic_baseline_arrow_back_24"/>
 
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,6 +40,15 @@
             android:layout_centerVertical="true"
             android:background="?attr/selectableItemBackgroundBorderless"
             />
+
+        <ImageButton
+            android:id="@+id/delete_location_btn"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="34dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_baseline_delete_24" />
 
 
     </RelativeLayout>
