--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -58,7 +58,7 @@
                     android:orientation="vertical">
 
                     <EditText
-                        android:id="@+id/editTextTextPersonName"
+                        android:id="@+id/edit_text_nom"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginTop="20dp"
@@ -71,7 +71,7 @@
                         android:hint="Nom" />
 
                     <EditText
-                        android:id="@+id/editTextTextPersonName2"
+                        android:id="@+id/edit_text_prenom"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginTop="20dp"
@@ -85,7 +85,7 @@
                         android:hint="Prénom" />
 
                     <EditText
-                        android:id="@+id/editTextTextPersonName3"
+                        android:id="@+id/edit_text_email"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginTop="20dp"
@@ -98,7 +98,7 @@
                         android:hint="Email" />
 
                     <EditText
-                        android:id="@+id/editTextTextMultiLine2"
+                        android:id="@+id/edit_text_message"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
                         android:layout_marginTop="20dp"
