--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/my_color"
     android:padding="16dp"
-    tools:context=".MainActivity">
+    tools:context=".ListLocationActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
