--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -64,12 +64,12 @@
             android:textSize="17dp"/>
 
         <TextView
+            android:id="@+id/date_debut_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="8dp"
             android:background="@drawable/rounded_corner"
             android:backgroundTint="@color/color_button"
-            android:id="@+id/date_debut_text_view"
             android:hint="Date début"
             android:padding="12dp"
             android:textColor="@color/black"
@@ -87,12 +87,12 @@
             android:textSize="17dp"/>
 
         <TextView
+            android:id="@+id/date_fin_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="8dp"
             android:background="@drawable/rounded_corner"
             android:backgroundTint="@color/color_button"
-            android:id="@+id/date_fin_text_view"
             android:hint="date fin"
             android:padding="12dp"
             android:textColor="@color/black"
@@ -114,7 +114,7 @@
             android:layout_marginVertical="8dp"
             android:background="@drawable/rounded_corner"
             android:backgroundTint="@color/color_button"
-            android:hint="Séléctionner une date "
+            android:hint="En euro "
             android:padding="12dp"
             android:textColor="@color/black"
             android:textSize="20sp" />
