--- a/app/src/main/res/layout/activity_location_create.xml
+++ b/app/src/main/res/layout/activity_location_create.xml
@@ -29,7 +29,7 @@
             android:text="Ajouter un véhicule"
             android:layout_centerInParent="true"
             android:textColor="@color/white"
-            android:textSize="30dp"
+            android:textSize="26dp"
             android:textStyle="bold"/>
 
         <ImageButton
@@ -158,7 +158,7 @@
                 android:layout_marginVertical="8dp"
                 android:background="@drawable/rounded_corner"
                 android:backgroundTint="@color/color_button"
-                android:hint="Statut"
+                android:hint="disponible / indisponible"
                 android:padding="12dp"
                 android:textColor="@color/black"
                 android:textSize="20sp"/>
